overflow fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,7 +20,7 @@ body{
     
 /*Render fonts*/
     text-rendering: optimizeLegibility;
-    overflow-x:hidden;
+/*    overflow-x:hidden;*/
 }
 
 .clearfix{
@@ -169,6 +169,8 @@ header {
 /* set position as you probably want to */
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    overflow-x: hidden;
+    position: fixed;
 }
 
 
